--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,34 +4,35 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:background="@color/black"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".MainActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
+        android:elevation="10dp"
         android:paddingStart="35dp"
         android:paddingEnd="20dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
             android:text="@string/leaderboard"
-            android:textStyle="bold"
+            android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20sp"
-            android:textAlignment="center"
-            android:layout_centerVertical="true"/>
+            android:textStyle="bold" />
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:background="@color/white"
             android:text="@string/submit"
-            android:textAllCaps="false"
-            android:layout_alignParentEnd="true"/>
+            android:textAllCaps="false" />
 
     </RelativeLayout>
 
@@ -39,9 +40,11 @@
         android:id="@+id/mtabLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabTextColor="@color/dark_grey"
+        android:elevation="10dp"
+        app:tabIndicatorColor="@color/white"
+        app:tabIndicatorHeight="5dp"
         app:tabSelectedTextColor="@color/white"
-        app:tabIndicatorColor="@color/white" />
+        app:tabTextColor="@color/dark_grey" />
 
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/mviewPager"
