--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,10 +27,10 @@
             android:textStyle="bold" />
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="125dp"
+            android:layout_height="40dp"
             android:layout_alignParentEnd="true"
-            android:background="@color/white"
+            android:background="@drawable/submit_btn_bk"
             android:text="@string/submit"
             android:textAllCaps="false" />
 
@@ -44,6 +44,7 @@
         app:tabIndicatorColor="@color/white"
         app:tabIndicatorHeight="5dp"
         app:tabSelectedTextColor="@color/white"
+        app:tabTextAppearance="@style/CustomTextAppearanceTabLayout"
         app:tabTextColor="@color/dark_grey" />
 
     <androidx.viewpager.widget.ViewPager
