Added Submit Project Activty. Also made some minor changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
             android:textStyle="bold" />
 
         <Button
+            android:id="@+id/submitProjectBtn"
             android:layout_width="125dp"
             android:layout_height="40dp"
             android:layout_alignParentEnd="true"
