--- a/app/src/main/res/layout/activity_learning_leaders_frag.xml
+++ b/app/src/main/res/layout/activity_learning_leaders_frag.xml
@@ -1,32 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white"
-    android:orientation="vertical">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <data>
+        <import type="java.util.ArrayList" />
+        <import type="com.danielezihe.gadsleaderboard.ItemsHelper" />
+        <variable
+            name="topLearnersArrList"
+            type="ArrayList&lt;ItemsHelper>" />
+    </data>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:orientation="vertical">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView_llf"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:clipToPadding="false"
-            android:paddingTop="25dp"
-            android:paddingBottom="20dp"
-            android:scrollbars="vertical" />
+            android:layout_height="match_parent">
 
-        <ProgressBar
-            android:id="@+id/progressBar_llf"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminateTint="@color/black"
-            android:layout_centerInParent="true"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView_llf"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:clipToPadding="false"
+                android:paddingTop="25dp"
+                android:paddingBottom="20dp"
+                android:scrollbars="vertical"
+                app:leadersList="@{topLearnersArrList}"/>
 
-    </RelativeLayout>
+            <ProgressBar
+                android:id="@+id/progressBar_llf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:indeterminateTint="@color/black" />
+
+        </RelativeLayout>
 
 
-</LinearLayout>
+    </LinearLayout>
+
+</layout>
