--- a/app/src/main/res/layout/activity_skill_iq_leaders_frag.xml
+++ b/app/src/main/res/layout/activity_skill_iq_leaders_frag.xml
@@ -1,30 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <data>
+        <import type="java.util.ArrayList" />
+        <import type="com.danielezihe.gadsleaderboard.ItemsHelper" />
+        <variable
+            name="skillIqLearnersArrList"
+            type="ArrayList&lt;ItemsHelper>" />
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView_silf"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:clipToPadding="false"
-            android:paddingTop="25dp"
-            android:paddingBottom="20dp"
-            android:scrollbars="vertical" />
+            android:layout_height="match_parent">
 
-        <ProgressBar
-            android:id="@+id/progressBar_silf"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminateTint="@color/black"
-            android:layout_centerInParent="true"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerView_silf"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/white"
+                android:clipToPadding="false"
+                android:paddingTop="25dp"
+                android:paddingBottom="20dp"
+                android:scrollbars="vertical"
+                app:leadersList="@{skillIqLearnersArrList}"/>
 
-    </RelativeLayout>
+            <ProgressBar
+                android:id="@+id/progressBar_silf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:indeterminateTint="@color/black" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </RelativeLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
+
