--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="lighter_dark_yellow">#F4B15A</color>
     <color name="lighter_dark_yellow_2">#FFAE45</color>
     <color name="lighter_dark_yellow_3">#F8CE98</color>
+    <color name="grey">#717171</color>
+    <color name="islamic_green">#05920B</color>
+    <color name="red">#FA0404</color>
 </resources>
