--- a/app/src/main/res/layout-ldpi/activity_submit_project.xml
+++ b/app/src/main/res/layout-ldpi/activity_submit_project.xml
@@ -24,24 +24,23 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="25dp">
+                android:padding="10dp">
 
                 <ImageView
                     android:id="@+id/top_back_button"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
-                    android:layout_centerVertical="true"
                     android:clickable="true"
                     android:contentDescription="@string/back_button_desc"
                     android:focusable="true"
                     android:src="@drawable/ic_baseline_arrow_back_24" />
 
                 <ImageView
-                    android:layout_width="250dp"
-                    android:layout_height="60dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
                     android:layout_centerInParent="true"
                     android:contentDescription="@string/gads_logo_desc"
-                    android:src="@drawable/gads_header" />
+                    android:src="@drawable/gads" />
 
             </RelativeLayout>
 
@@ -57,7 +56,7 @@
                     android:layout_gravity="center"
                     android:text="@string/project_submission"
                     android:textColor="@color/lighter_dark_yellow_2"
-                    android:textSize="25sp"
+                    android:textSize="15sp"
                     android:textStyle="bold" />
 
                 <View
@@ -71,9 +70,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="15dp"
                 android:orientation="vertical"
-                android:padding="25dp">
+                android:padding="15dp">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -83,7 +82,7 @@
                         android:id="@+id/field_fname"
                         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:layout_toStartOf="@+id/divider"
                         android:hint="@string/first_name"
                         android:textColorHint="@color/black"
@@ -97,7 +96,8 @@
                             android:inputType="text"
                             android:text="@={submit_pro_act_view_model.fname}"
                             android:textColor="@color/black"
-                            android:textCursorDrawable="@null" />
+                            android:textCursorDrawable="@null"
+                            android:textSize="15sp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -111,7 +111,7 @@
                         android:id="@+id/field_lname"
                         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="50dp"
                         android:layout_toEndOf="@+id/divider"
                         android:hint="@string/last_name"
                         android:textColorHint="@color/black"
@@ -125,7 +125,8 @@
                             android:inputType="text"
                             android:text="@={submit_pro_act_view_model.lname}"
                             android:textColor="@color/black"
-                            android:textCursorDrawable="@null" />
+                            android:textCursorDrawable="@null"
+                            android:textSize="15sp" />
 
                     </com.google.android.material.textfield.TextInputLayout>
 
@@ -136,8 +137,8 @@
                     android:id="@+id/field_email"
                     style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="25dp"
                     android:hint="@string/email_address"
                     android:textColorHint="@color/black"
                     app:boxStrokeColor="@color/white"
@@ -150,7 +151,8 @@
                         android:inputType="textEmailAddress"
                         android:text="@={submit_pro_act_view_model.emailAddress}"
                         android:textColor="@color/black"
-                        android:textCursorDrawable="@null" />
+                        android:textCursorDrawable="@null"
+                        android:textSize="15sp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -159,8 +161,8 @@
                     android:id="@+id/field_githubLink"
                     style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
+                    android:layout_height="50dp"
+                    android:layout_marginTop="25dp"
                     android:hint="@string/project_on_github_link"
                     android:textColorHint="@color/black"
                     app:boxStrokeColor="@color/white"
@@ -173,7 +175,8 @@
                         android:inputType="textUri"
                         android:text="@={submit_pro_act_view_model.projectLink}"
                         android:textColor="@color/black"
-                        android:textCursorDrawable="@null" />
+                        android:textCursorDrawable="@null"
+                        android:textSize="15sp" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -182,17 +185,17 @@
 
             <Button
                 android:id="@+id/submit_project_btn"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="10dp"
                 android:background="@drawable/main_submit_btn_gradient_bk"
                 android:contentDescription="@string/submit_button_desc"
                 android:elevation="5dp"
                 android:text="@string/submit"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="18sp" />
+                android:textSize="16sp" />
 
         </LinearLayout>
 
